<resources>
    <string name="app_name">圆梦共享教育传媒</string>
    <string name="title_home">主页</string>
    <string name="title_categories">视频分类</string>
    <string name="title_media">圆梦传媒</string>
    <string name="title_gift">礼包</string>
    <string name="title_information">个人中心</string>
    <string name="login_name">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_button">登录</string>
    <string name="register_button">注册</string>
    <string name="phone_number">请输入您的手机号码</string>
    <string name="email_account">请输入您的邮箱</string>
    <string name="get_code">获取验证码</string>
    <string name="input_code">请输入验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="comfirm_password">请再次输入密码</string>
    <string name="next_step">下一步</string>
    <string name="comfirm">确定</string>
    <string name="forget_password">忘记密码？</string>
    <string name="password_error">密码不能为空</string>
    <string name="login_error">用户名不能为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="giraffe_player_url_empty">请指定播放视频的地址</string>
    <string name="small_problem">出现了点小问题,稍后重试</string>
    <string name="can_not_play">不能播放此视频</string>
    <string name="not_support">播放器不支持此设备</string>

    <!--权限检查-->
    <string name="no_camera_permission">Camera usage is not permitted, please open first</string>
    <string name="no_record_bluetooth_permission">Bluetooth is not permitted to record, please open first</string>
    <string name="no_record_audio_permission">Audio is not permitted to record, please open first</string>
    <string name="no_read_phone_state_permission">Phone state is not permitted to read, please opend first</string>
    <string name="no_write_external_storage_permission">External storage is not permitted to write, please open first</string>
    <string name="no_read_external_storage_permission">External storage is not permitted to read, please open first</string>

    <!--个人中心-->
    <string name="info_cautious">*支付宝账号的实名与真实姓名必须一致，否则提现将无法到账</string>
    <string name="wx_account">绑定微信账号</string>
    <string name="buy_gift">购买礼包</string>
    <string name="point_cash">积分提现</string>
    <string name="point_change">积分转换</string>
    <string name="update">版本更新</string>
    <string name="clean">清除缓存</string>
    <string name="about">关于我们</string>
    <string name="advice">意见建议</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_user_login">Sign in</string>
    <!---->
    <string name="video_detail">视频简介</string>
    <string name="video_comment">评论</string>


</resources>
