<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="com.example.admin.dreammediatechapp.UI.InformationPage.SettingsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:text="圆梦共享教育传媒"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/video_list_title"
            android:text="V1.0"/>
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_check"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textSize="@dimen/video_list_title"
        android:text="@string/update"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clean_cache"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:textSize="@dimen/video_list_title"
        android:text="@string/clean"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_us"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textSize="@dimen/video_list_title"
        android:text="@string/about"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/advice_problem"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:textSize="@dimen/video_list_title"
        android:text="@string/advice"/>

</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/logout_button"
        android:background="@color/colorPrimary"
        android:text="@string/logout"
        android:textSize="@dimen/video_list_title"
        android:textColor="@color/white" />

</LinearLayout>
