<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.dreammediatechapp.UI.LoginPage.UserLoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/top">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_name"

                    android:imeActionLabel="test"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:imeActionLabel="test"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>



            <LinearLayout
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="70dp"

                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/login_button"
                    style="?android:textAppearanceSmall"

                    android:layout_width="141dp"
                    android:layout_height="34dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/top"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_div"
                    android:text="@string/login_button"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/login_register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="141dp"
                    android:layout_height="34dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_div"
                    android:text="@string/register_button"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forget_password"
                android:text="@string/forget_password"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimary"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
