<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    >


    <RelativeLayout
        android:id="@+id/register_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:addStatesFromChildren="true"
        android:weightSum="1"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="9dp">


        <EditText
            android:id="@+id/email_account"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:hint="@string/email_account"
            android:imeActionLabel="test"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="54dp" />

        <Button
            android:id="@+id/email_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/white"
            android:text="@string/get_code"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="-81dp"
            android:background="@drawable/button_div"
            />


    </RelativeLayout>
    <LinearLayout
        android:id="@+id/register_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_input_code"
            android:hint="@string/input_code"
            android:inputType="number"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_email"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"

            android:text="下一步"/>

    </LinearLayout>


</LinearLayout>
