<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    >


    <LinearLayout
        android:id="@+id/register_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/paaword_phone_number"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/phone_number"
            android:layout_weight="0.8"
            android:imeActionLabel="test"
            android:imeOptions="actionUnspecified"
            android:maxLines="1"
            android:singleLine="true"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="54dp" />

        <Button
            android:id="@+id/password_get_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textColor="@color/white"
            android:text="@string/get_code"
            android:background="@color/colorPrimary"
            />



    </LinearLayout>
    <LinearLayout
        android:id="@+id/register_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/register_input_code"
            android:hint="@string/input_code"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeToEmail"

            android:text="通过邮箱找回"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_phone_button"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
           android:background="@color/colorPrimary"

            android:text="下一步"/>

    </LinearLayout>


</LinearLayout>
